--- a/articles/templates/article_detail.html
+++ b/articles/templates/article_detail.html
@@ -3,6 +3,7 @@
 
 
 <p>Title : {{article}}</p>
+<p>Owner : {{article.author}}</p>
 <p>Slug : {{article.slug}}</p>
 <p>Description : {{article.description}}</p>
 <p>Body : {{article.body}}</p>
