--- a/articles/templates/article_update.html
+++ b/articles/templates/article_update.html
@@ -1,3 +1,5 @@
+<p>user: {{current_user}}</p>
+<p>article author: {{article_author}}</p>
 <form method="post"> 
 	{% csrf_token %} 
 	{{ form.as_p }} 
