--- a/profiles/templates/profile_delete.html
+++ b/profiles/templates/profile_delete.html
@@ -1,5 +1,5 @@
 <form method="post">
     {% csrf_token %} 
-    <p>Are you sure you want to delete "{{ article.title }}"?</p> 
+    <p>Are you sure you want to delete "{{ profile }}"?</p> 
     <input type="submit" value="Confirm"> 
 </form>     
